--- a/front_tag/templates/front_tag/index.html
+++ b/front_tag/templates/front_tag/index.html
@@ -1,7 +1,9 @@
 {% if latest_question_list %}
     <ul>
     {% for question in latest_question_list %}
-        <li><a href="/front_tag/{{ question.id }}/">{{ question.question_text }}</a>x</li>
+        <li>
+            <a href="{% url 'front_tag:detail' question.id %}">{{ question.question_text }}</a>
+        </li>
     {% endfor %}
     </ul>
 {% else %}
