url norma edit delete list

--- a/front_tag/templates/norma/list_norma.html
+++ b/front_tag/templates/norma/list_norma.html
@@ -27,6 +27,7 @@
                                 <a href=>
                                     Editar
                                 </a>
+                                <a href="{% url 'front_tag:edit' norma.id %}">Edit</a>
                                 <a href=>
                                         Eliminar
                                 </a>
