--- a/front/etiquetas/templates/etiquetas-form.html
+++ b/front/etiquetas/templates/etiquetas-form.html
@@ -1,5 +1,10 @@
 {% extends "django_sb_admin/base.html" %} 
-{% block sb_admin_header %}Etiqueta{% endblock sb_admin_header %}
+{% block sb_admin_header %}
+{% load static %}
+
+<!--script src="{% static "dist/jstree.js"%}"></script>
+<script src="{% static "dist/themes/default/style.css"%}"></script-->
+{% endblock sb_admin_header %}
 {% block sb_admin_sidebar %}<!-- left sidebar -->
 <ul class="nav navbar-nav side-nav">
     <li>
@@ -19,47 +24,148 @@
     </li>
 </ul>
 {% endblock sb_admin_sidebar %}
+
 {% block sb_admin_title %}Etiqueta{% endblock sb_admin_title %}
 
 {% block sb_admin_navbar_right %} Nuevo/ Editar Etiqueta{% endblock sb_admin_navbar_right %}
 {% block sb_admin_content %}
 
-
-<div class="form-horizontal">
-    <div class="control-group">
-        <label class="control-label" >
-            Parametro
-        </label>
-        <div class="controls">
-            <input type="text" id="inputParametro" placeholder="Nombre Parametro" />
-        </div>
-        
-        <label class="control-label" >
-            Etiqueta Existente
-        </label>
-        <div class="controls">
-            <select id="inputParametro" placeholder="Etiqueta Existente" />
-                <option value="volvo">OFIELD</option>
-                <option value="saab">AHOG</option>
-                <option value="mercedes">SVP</option>
-            </select>
-        </div>
-        
+<div class="form-row">
+    <div class="col-md-6">
+        <div class="panel-group">
+            <div class="panel panel-default">
+                <div class="panel-body">
+                    <form method="POST">
+                        {% csrf_token %}
+                        {{ form }}
+                        <button type="submit">Guardar</button>
+                    </form>
+                    {% if etiqueta %}
+                        <a href="{% url 'delete_etiqueta' etiqueta.id %}">Eliminar Etiqueta</a>
+                    {% endif %}
+                </div>
+            </div>
+        </div>   
     </div>
+    
+    <div class="col-md-6">
+        <div class="panel-group">
+                <div class="panel panel-default">
+                    <div class="panel-body">Estructura Etiqueta
+                        <div  style="text-align:right;">
+                                <input type="text" value="" style="box-shadow:inset 0 0 4px #eee; width:120px; margin:0; padding:6px 12px; border-radius:4px; border:1px solid silver; font-size:1.1em;" id="demo_q" placeholder="Buscar" />
+                        </div>
+                        <div id="jstree">
+                                <!-- in this example the tree is populated from inline HTML -->
+                                <ul>
+                                    <li>Root node 1
+                                    <ul>
+                                        <li id="child_node_1">Child node 1</li>
+                                        <li>Child node 2</li>
+                                    </ul>
+                                    </li>
+                                    <li>Root node 2</li>
+                                </ul>
+                            </div>
+                                <button type="button" onclick="demo_create();"><i class="glyphicon glyphicon-plus"></i> Parametro</button>
+                                <button type="button" onclick="demo_create();"><i class="glyphicon glyphicon-chevron-up"></i> Parametro "Y"</button>
+                                <button type="button" onclick="demo_create();"><i class="glyphicon glyphicon-chevron-down"></i> Parametro "O"</button>
+                                <button type="button" onclick="demo_rename();"><i class="glyphicon glyphicon-pencil"></i> Renombrar</button>
+                                <button type="button" onclick="demo_delete();"><i class="glyphicon glyphicon-remove"></i> Borrar</button>
+                    </div>
+                </div>        
+        </div>
+    </div> 
 </div>
-<input type='button' value='Nuevo Parametro' id='addButton' />
-<input type='button' value='Borrar Paramentro' id='removeButton' 
-</br>
-<form method="POST">
-    {% csrf_token %}
-    {{ form }}
-    <button type="submit">Guardar</button>
-</form>
 
 
-{% if etiqueta %}
-    <a href="{% url 'delete_etiqueta' etiqueta.id %}">Eliminar Etiqueta</a>
-{% endif %}
+{% block extrastyle %}
+<script src="{% static "dist/themes/default/style.css"%}"></script>    
+{% endblock extrastyle %} 
+	
+{% block extrajs %}
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/1.12.1/jquery.min.js"></script>
+
+<script>
+        $("textarea").get(0).scrollHeight;
+        function demo_create() {
+            var ref = $('#jstree').jstree(true),
+                sel = ref.get_selected();
+            
+            console.log(ref) ;
+            if(!sel.length) { return false; }
+            sel = sel[0];
+            console.log(sel) ;
+            sel = ref.create_node(sel, {"type":"file"});
+            if(sel) {
+                ref.edit(sel);
+            }
+        };
+        function demo_rename() {
+            var ref = $('#jstree').jstree(true),
+                sel = ref.get_selected();
+            if(!sel.length) { return false; }
+            sel = sel[0];
+            ref.edit(sel);
+        };
+        function demo_delete() {
+            var ref = $('#jstree').jstree(true),
+                sel = ref.get_selected();
+            if(!sel.length) { return false; }
+            ref.delete_node(sel);
+        };
+        $(function () {
+            var to = false;
+            $('#demo_q').keyup(function () {
+                if(to) { clearTimeout(to); }
+                to = setTimeout(function () {
+                    var v = $('#demo_q').val();
+                    $('#jstree').jstree(true).search(v);
+                }, 250);
+            });
+
+            $('#jstree')
+                .jstree({
+                    "core" : {
+                        "animation" : 0,
+                        "check_callback" : true,
+                        'force_text' : true,
+                        "themes" : { "stripes" : true },
+                        'data' : {
+                            'url' : function (node) {
+                                console.log (node + "url") ;
+                                var url = window.location.pathname;
+                                var ids = url.substring(url.lastIndexOf('/') + 1);
+                                return node.id === '#' ? "etiquetas/ajax/data_etiqueta/?ids="+ids : "etiquetas/ajax/data_etiqueta/?ids="+ids  ;
+                            },
+                            'data' : function (node) {
+                                console.log (node + "data") ;
+                                return { 'id' : node.id } ;
+                            }
+                        }
+                        /*'data' : {
+                            'url' : function (node) {
+                                return node.id === '#' ? "{% static "ajax_demo_roots.json"%}" : "{% static "ajax_demo_roots.json"%}" ;
+                            },
+                            'data' : function (node) {
+                                return { 'id' : node.id };
+                            }
+                        }*/
+                    },
+                    "types" : {
+                        "#" : { "max_children" : 1, "max_depth" : 4, "valid_children" : ["root"] },
+                        "root" : { "icon" : "/static/3.3.5/assets/images/tree_icon.png", "valid_children" : ["default"] },
+                        "default" : { "valid_children" : ["default","file"] },
+                        "file" : { "icon" : "glyphicon glyphicon-file", "valid_children" : [] }
+                    },
+                    "plugins" : [ "contextmenu", "dnd", "search", "state", "types", "wholerow" ]
+                });
+        });
+
+
+</script>
+{% endblock extrajs %}
+
 
 
 {% endblock sb_admin_content %}
